Buildings now have to be built first